k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: farm-manager-service
spec:
  type: ClusterIP
  selector:
    app: farm-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
