k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farm-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /otusapp/(.*)/(.*)
            backend:
              service:
                name: farm-manager-service
                port:
                  number: 80
          - pathType: Prefix
            path: /(.{0})(.*)
            backend:
              service:
                name: farm-manager-service
                port:
                  number: 80
